Fix Jenkinsfile: remove Maven tool