@@ -4,6 +4,7 @@ package ServiceTest;
 import iteam.tn.gestionformation.Repository.TypeFormationRepository;
 import iteam.tn.gestionformation.model.TypeFormation;
 import iteam.tn.gestionformation.service.TypeFormationService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,10 +12,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -26,54 +29,69 @@ class TypeFormationServiceTest {
     private TypeFormationRepository repository;
 
     @InjectMocks
-    private TypeFormationService service;
+    private TypeFormationService typeFormationService;
+
+    private TypeFormation typeFormation;
+
+    @BeforeEach
+    void setUp() {
+        typeFormation = TypeFormation.builder()
+                .id(1L)
+                .nom("Soft Skills")
+                .description("Communication et Leadership")
+                .build();
+    }
 
     @Test
-    @DisplayName("✅ Succès : Créer un nouveau type")
     void creerType_Success() {
-        // Given
-        String nom = "Technique";
-        String desc = "Formations IT";
+        // GIVEN
+        String nom = "Soft Skills";
+        String desc = "Communication et Leadership";
 
         when(repository.existsByNom(nom)).thenReturn(false);
-        when(repository.save(any(TypeFormation.class))).thenAnswer(i -> i.getArgument(0));
+        when(repository.save(any(TypeFormation.class))).thenReturn(typeFormation);
 
-        // When
-        TypeFormation result = service.creerType(nom, desc);
+        // WHEN
+        TypeFormation result = typeFormationService.creerType(nom, desc);
 
-        // Then
-        assertThat(result.getNom()).isEqualTo(nom);
-        assertThat(result.getDescription()).isEqualTo(desc);
+        // THEN
+        assertNotNull(result);
+        assertEquals(nom, result.getNom());
         verify(repository, times(1)).save(any(TypeFormation.class));
     }
 
     @Test
-    @DisplayName("❌ Erreur : Type déjà existant")
-    void creerType_AlreadyExists() {
-        // Given
+    void creerType_AlreadyExists_ShouldThrowException() {
+        // GIVEN
         String nom = "Soft Skills";
         when(repository.existsByNom(nom)).thenReturn(true);
 
-        // When & Then
-        // Cette branche est CRUCIALE pour JaCoCo (Couverture du IF)
-        assertThatThrownBy(() -> service.creerType(nom, "description"))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessage("Type déjà existant");
+        // WHEN & THEN
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            typeFormationService.creerType(nom, "description");
+        });
 
-        verify(repository, never()).save(any());
+        assertEquals("Type déjà existant", exception.getMessage());
+        // On vérifie que save n'est jamais appelé si le nom existe déjà
+        verify(repository, never()).save(any(TypeFormation.class));
     }
 
     @Test
-    @DisplayName("✅ Succès : Lister les types")
-    void listerTypes_Success() {
-        // Given
-        when(repository.findAll()).thenReturn(List.of(new TypeFormation(), new TypeFormation()));
+    void listerTypes_ShouldReturnList() {
+        // GIVEN
+        List<TypeFormation> mockList = Arrays.asList(
+                typeFormation,
+                TypeFormation.builder().nom("Technical").build()
+        );
+        when(repository.findAll()).thenReturn(mockList);
 
-        // When
-        List<TypeFormation> list = service.listerTypes();
+        // WHEN
+        List<TypeFormation> result = typeFormationService.listerTypes();
 
-        // Then
-        assertThat(list).hasSize(2);
-        verify(repository).findAll();
+        // THEN
+        assertEquals(2, result.size());
+        assertEquals("Soft Skills", result.get(0).getNom());
+        verify(repository, times(1)).findAll();
     }
+
 }
